# shiny-pyseed-demo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: check-pr.yml  release-new-version.yml  run-tests.yml  update-pre-commit-hooks.yml
1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0/CHANGELOG/: index.html
1.0/LICENSE/: index.html
1.0/search/: search_index.json
1.0/usage/SUMMARY/: index.html
1.0/usage/shiny_pyseed_demo/: index.html
1.0/usage/shiny_pyseed_demo/foo/: index.html
1.0/usage/shiny_pyseed_demo/spam/: index.html
docs/: index.md  shiny_pyseed_demo.foo.md  shiny_pyseed_demo.md  shiny_pyseed_demo.spam.md
scripts/: gen_site_usage_pages.py
src/shiny_pyseed_demo/: __init__.py  spam.py
src/shiny_pyseed_demo/foo/: __init__.py  _bar.py
